--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ install:
 before_script:
   # Use actual Ansible Galaxy role name for the project directory.
   - cd ../
-  - mv ansible-role.$ROLE_NAME chauanhtuandl.$ROLE_NAME
-  - cd chauanhtuandl.$ROLE_NAME
+  # - mv ansible-role.$ROLE_NAME chauanhtuandl.$ROLE_NAME
+  - cd graylog-ansible-role
 
 script:
   # Run tests.
