--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -4,7 +4,7 @@
   yum:
     name: "{{ graylog_yum_rpm_url }}"
     state: "present"
-    update_cache: True
+    update_cache: true
   when: graylog_manage_yum_repo
 
 - name: "Graylog server should be installed"
