--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -46,7 +46,7 @@ graylog_http_thread_pool_size: 16
 # Search
 graylog_elasticsearch_hosts: "http://127.0.0.1:9200"
 graylog_elasticsearch_template_name: "graylog-internal"
-graylog_allow_leading_wildcard_searches: False
+graylog_allow_leading_wildcard_searches: false
 graylog_allow_highlighting: false
 graylog_elasticsearch_config_file: ""
 graylog_elasticsearch_index_prefix: "graylog"
@@ -83,7 +83,7 @@ graylog_elasticsearch_max_number_of_indices: 20
 graylog_processbuffer_processors: 5
 graylog_outputbuffer_processors: 3
 graylog_processor_wait_strategy: "blocking"
-graylog_dead_letters_enabled: False
+graylog_dead_letters_enabled: false
 graylog_lb_recognition_period_seconds: 3
 graylog_lb_throttle_threshold_percentage: 95
 graylog_stream_processing_max_faults: 3
@@ -185,7 +185,10 @@ graylog_web_thread_pool_size: 16
 
 # JVM
 graylog_gc_warning_threshold: "1s"
-graylog_server_java_opts: "-Djava.net.preferIPv4Stack=true -Xms1500m -Xmx1500m -XX:NewRatio=1 -server -XX:+ResizeTLAB -XX:+UseConcMarkSweepGC -XX:+CMSConcurrentMTEnabled -XX:+CMSClassUnloadingEnabled -XX:+UseParNewGC -XX:-OmitStackTraceInFastThrow"
+graylog_server_java_opts: >-
+  '-Djava.net.preferIPv4Stack=true -Xms1500m -Xmx1500m -XX:NewRatio=1 -server -XX:+ResizeTLAB 
+  -XX:+UseConcMarkSweepGC -XX:+CMSConcurrentMTEnabled -XX:+CMSClassUnloadingEnabled 
+  -XX:+UseParNewGC -XX:-OmitStackTraceInFastThrow'
 graylog_server_args: ""
 graylog_server_wrapper: ""
 
