--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -28,5 +28,6 @@
       changed_when: false
 
   roles:
-    - role: elastic.elasticsearch
+    - role: ansible-elasticsearch
+    - role: ansible-role-nginx
     - role: graylog-ansible-role
