--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,11 @@
 ---
 
-dependencies:
-  - role: "elastic.elasticsearch"
-    when: graylog_install_elasticsearch
+# dependencies:
+#   - role: "elastic.elasticsearch"
+#     when: graylog_install_elasticsearch
 
-  - role: "jdauphant.nginx"
-    when: graylog_install_nginx
+#   - role: "jdauphant.nginx"
+#     when: graylog_install_nginx
 
 galaxy_info:
   author: "Marius Sturm"
