--- a/tasks/mongodb-RedHat.yml
+++ b/tasks/mongodb-RedHat.yml
@@ -15,6 +15,14 @@
     state: "installed"
   with_items: "{{ graylog_mongodb_package_dependencies | default([]) }}"
 
+- name: "Install policycoreutils-python"
+  package:
+    name: policycoreutils-python
+    state: installed
+  register: zabbix_agent_policycoreutils_installed
+  until: zabbix_agent_package_installed is succeeded
+  become: true
+
 - name: "MongoDB should be installed"
   yum:
     name: "mongodb-org"
