--- a/tasks/mongodb-Debian.yml
+++ b/tasks/mongodb-Debian.yml
@@ -28,6 +28,15 @@
   when:
     - ansible_distribution == 'Debian'
 
+- name: "Install policycoreutils-python"
+  apt:
+    pkg: policycoreutils-python-utils
+    state: installed
+    update_cache: true
+  register: zabbix_agent_policycoreutils_installed
+  until: zabbix_agent_package_installed is succeeded
+  become: true
+
 - name: "MongoDB should be installed"
   apt:
     name: "mongodb-org"
