--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -30,9 +30,9 @@ graylog_alert_check_interval: 60
 graylog_disable_sigar: false
 
 # REST
-graylog_http_bind_address: "0.0.0.0:9000"
-graylog_http_publish_uri: "http://0.0.0.0:9000/"
-graylog_http_external_uri: "http://0.0.0.0:9000/"
+graylog_http_bind_address: "{{ ansible_default_ipv4.address }}:9000"
+graylog_http_publish_uri: "http://{{ ansible_default_ipv4.address }}:9000/"
+graylog_http_external_uri: "http://{{ ansible_default_ipv4.address }}:9000/"
 graylog_http_enable_cors: true
 graylog_http_enable_gzip: true
 graylog_http_enable_tls: false
