--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,19 +1,9 @@
 ---
-
-# Requirements
-graylog_java_ppa: "ppa:webupd8team/java"
-graylog_java_repo: "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main"
-graylog_java_src_repo: "deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main"
-graylog_java_repo_keyserver: "keyserver.ubuntu.com"
-graylog_java_repo_key: "EEA14886"
-graylog_version: "3.0"
-
-graylog_package_state: "present"
-graylog_apt_deb_url: "https://packages.graylog2.org/repo/packages/graylog-{{ graylog_version }}-repository_latest.deb"
-graylog_manage_apt_repo: true
-graylog_yum_rpm_url: "https://packages.graylog2.org/repo/packages/graylog-{{ graylog_version }}-repository_latest.rpm"
-graylog_manage_yum_repo: true
-graylog_es_debian_pin_version: "6.*"
+---
+packages_name: graylog-server
+service_name: graylog-server
+service_service_state: started
+service_service_enabled: true
 
 # General
 graylog_is_master: true
@@ -132,20 +122,6 @@ graylog_inputbuffer_wait_strategy: "blocking"
 graylog_outputbuffer_processor_keep_alive_time: 5000
 graylog_outputbuffer_processor_threads_core_pool_size: 3
 graylog_outputbuffer_processor_threads_max_pool_size: 30
-
-# MongoDB
-graylog_mongodb_ubuntu_repo: "deb [ arch=amd64,arm64 ] http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.6 multiverse"
-graylog_mongodb_ubuntu_keyserver: "keyserver.ubuntu.com"
-graylog_mongodb_ubuntu_key: "2930ADAE8CAF5059EE73BB4B58712A2291FA4AD5"
-graylog_mongodb_debian_repo: "deb http://repo.mongodb.org/apt/debian {{ ansible_distribution_release }}/mongodb-org/3.6 main"
-graylog_mongodb_debian_keyserver: "keyserver.ubuntu.com"
-graylog_mongodb_debian_key: "2930ADAE8CAF5059EE73BB4B58712A2291FA4AD5"
-graylog_mongodb_redhat_repo: "https://repo.mongodb.org/yum/redhat/$releasever/mongodb-org/3.6/x86_64/"
-graylog_mongodb_redhat_key: "https://www.mongodb.org/static/pgp/server-3.6.asc"
-
-graylog_mongodb_uri: "mongodb://127.0.0.1:27017/graylog"
-graylog_mongodb_max_connections: 100
-graylog_mongodb_threads_allowed_to_block_multiplier: 5
 
 # Drools
 graylog_rules_file: ""
