--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,17 +1,5 @@
 ---
-
-- name: "reload systemd configuration"
-  systemd:
-    daemon_reload: true
-
-- name: "restart graylog-server"
+- name: restart {{ service_name }}
   service:
-    name: "graylog-server"
-    state: "restarted"
-    enabled: true
-
-- name: "restart mongod"
-  service:
-    name: "mongod"
-    state: "restarted"
-    enabled: true
+    name: "{{ service_name }}"
+    state: restarted
