--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -1,38 +1,24 @@
 ---
-
-- name: "Graylog repository package should be downloaded"
-  get_url:
-    url: "{{ graylog_apt_deb_url }}"
-    dest: "/tmp/graylog_repository.deb"
-  when: graylog_manage_apt_repo
-
-- name: "Package 'apt-transport-https' should be installed"
+- name: Ensure package idependent are installed.
   apt:
-    name: "apt-transport-https"
-    state: "installed"
-
-- name: "Graylog repository package should be installed"
-  apt:
-    deb: "/tmp/graylog_repository.deb"
-    state: "installed"
-    dpkg_options: "force-all"
-  when: graylog_manage_apt_repo
-  register: "install_repo"
-
-- name: "APT cache should be updated"
-  apt:
+    name: "{{ apt_packages_name }}"
     update_cache: true
-# when: install_repo.changed
+    state: present
+  when: apt_packages_name is defined
 
-- name: "Graylog server package should be installed"
+- name: Install Graylog repository.
   apt:
-    name: "graylog-server{% if graylog_server_version is defined %}={{ graylog_server_version }}{% endif %}"
-    state: "{{ graylog_package_state }}"
-  notify: "restart graylog-server"
+    deb: https://packages.graylog2.org/repo/packages/graylog-3.0-repository_latest.deb
 
-- name: "setup-Debian.yml | Set elasticsearch priority to {{ graylog_es_debian_pin_version }} apt_preferences"
-  template:
-    src: "apt_preferences.d/debian_elasticsearch.j2"
-    dest: "/etc/apt/preferences.d/elasticsearch"
-    owner: "root"
-    mode: 0644
+- name: Ensure {{ service_name }} are installed.
+  apt:
+    name: "{{ packages_name }}"
+    update_cache: true
+    state: present
+
+# - name: "setup-Debian.yml | Set elasticsearch priority to {{ graylog_es_debian_pin_version }} apt_preferences"
+#   template:
+#     src: "apt_preferences.d/debian_elasticsearch.j2"
+#     dest: "/etc/apt/preferences.d/elasticsearch"
+#     owner: "root"
+#     mode: 0644
