--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -1,14 +1,34 @@
 ---
+# - name: Download gpg key
+#   get_url:
+#     url: "{{ item.gpgkey }}"
+#     dest: "/etc/pki/tls/certs/{{ packages_name }}"
+#   when: item.sslcacert is defined and item.gpgkey is defined
+#   with_items: "{{ yum_repository }}"
 
-- name: "Repositories should be updated"
+- name: Add {{ service_name }} repository
+  yum_repository:
+    name: "{{ item.name }}"
+    description: "{{ item.name }} YUM repo"
+    baseurl: "{{ item.baseurl }}"
+    repo_gpgcheck: "{{ item.repo_gpgcheck | default(omit) }}"
+    enabled: "{{ item.enabled | default(omit) }}"
+    gpgcheck: "{{ item.gpgcheck | default(omit) }}"
+    gpgkey: "{{ item.gpgkey | default(omit) }}"
+    sslverify: "{{ item.sslverify | default(omit) }}"
+    sslcacert: "{{ item.sslcacert | default(omit) }}"
+  with_items: "{{ yum_repository }}"
+  when: yum_repository is defined
+
+- name: Ensure package idependent are installed.
   yum:
-    name: "{{ graylog_yum_rpm_url }}"
-    state: "present"
+    name: "{{ yum_packages_name }}"
     update_cache: true
-  when: graylog_manage_yum_repo
+    state: present
+  when: yum_packages_name is defined
 
-- name: "Graylog server should be installed"
+- name: Ensure {{ service_name }} are installed.
   yum:
-    name: "graylog-server{% if graylog_server_version is defined %}-{{ graylog_server_version }}{% endif %}"
-    state: "{{ graylog_package_state }}"
-  notify: restart graylog-server
+    name: "{{ packages_name }}"
+    update_cache: true
+    state: present
