--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -34,3 +34,4 @@
     - role: chauanhtuandl.java
     - role: chauanhtuandl.mongodb
     - role: chauanhtuandl.elasticsearch
+    - role: ansible-role.graylog
