--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,3 +16,16 @@
     name: "{{ service_name }}"
     state: "{{ service_service_state }}"
     enabled: "{{ service_service_enabled }}"
+
+- include_tasks: server.yml
+
+- name: "Wait for Graylog server to startup"
+  uri:
+    url: "{{ graylog_http_publish_uri }}"
+    status_code: 200
+    validate_certs: false
+  register: result
+  until: result.status == 200
+  retries: 60
+  delay: 5
+  when: graylog_not_testing
