--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -28,3 +28,6 @@
   retries: 60
   delay: 5
   when: graylog_not_testing
+
+- name: return motd to registered var
+  command: cat /var/log/graylog-server/server.log
