--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,17 +18,17 @@
     state: "{{ service_service_state }}"
     enabled: "{{ service_service_enabled }}"
 
-# - name: "Wait for Graylog server to startup"
-#   uri:
-#     url: "{{ graylog_http_publish_uri }}"
-#     status_code: 200
-#     validate_certs: false
-#   register: result
-#   until: result.status == 200
-#   retries: 60
-#   delay: 5
-#   when: graylog_not_testing
+- name: "Wait for Graylog server to startup"
+  uri:
+    url: "{{ graylog_http_publish_uri }}"
+    status_code: 200
+    validate_certs: false
+  register: result
+  until: result.status == 200
+  retries: 60
+  delay: 5
+  when: graylog_not_testing
 
-- name: return motd to registered var
-  command: ls /var/log/graylog-server/
-  changed_when: false
+# - name: return motd to registered var
+#   command: ls /var/log/graylog-server/
+#   changed_when: false
