--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -2,6 +2,8 @@
 apt_packages_name:
   - python-apt
   - apt-transport-https
+  - uuid-runtime
+  - pwgen
 apt_repository: 'http://repo.mongodb.org/apt/debian stretch/mongodb-org/4.0 main'
 apt_gpg_key: 'https://www.mongodb.org/static/pgp/server-4.0.asc'
 
