--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -4,28 +4,8 @@
 
   # Variable for add host to zabbix server
   vars:
-    zabbix_url: "http://zabbix.dj-wasabi.local"
-    zabbix_api_user: Admin
-    zabbix_api_pass: zabbix
-    zabbix_api_create_hostgroup: false
-    zabbix_api_create_hosts: false
-    zabbix_create_hostgroup: present  # or absent
-    zabbix_create_host: present       # or absent
-    zabbix_update_host: true
-    zabbix_host_status: enabled       # or disabled
-    zabbix_proxy: null
-    zabbix_inventory_mode: disabled
-    zabbix_useuip: 1
-    zabbix_host_groups:
-      - Linux servers
-    zabbix_link_templates:
-      - Template OS Linux
-
-  pre_tasks:
-    - name: Update apt cache.
-      apt: update_cache=yes cache_valid_time=600
-      when: ansible_os_family == 'Debian'
-      changed_when: false
+    - elasticsearch_cluster_name: 'graylog'
+    - elasticsearch_action_auto_create_index: false
 
   roles:
     - role: chauanhtuandl.repo_epel
