--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,11 @@
 ---
 dependencies:
-  - chauanhtuandl.repo_epel
-  - chauanhtuandl.pip
-  - chauanhtuandl.java
-  - chauanhtuandl.mongodb
-  - chauanhtuandl.elasticsearch
+  - src: chauanhtuandl.java
+    version: master
+  - src: chauanhtuandl.mongodb
+    version: master
+  - src: chauanhtuandl.elasticsearch
+    version: master
 
 galaxy_info:
   role_name: graylog
